--- a/src/main/java/UI/ViewMatches.form
+++ b/src/main/java/UI/ViewMatches.form
@@ -30,17 +30,16 @@
                       <Component id="jScrollPane1" min="-2" pref="192" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="subButton" pref="73" max="32767" attributes="0"/>
+                          <Component id="subButton" max="32767" attributes="0"/>
                           <Component id="toLineupButton" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="192" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="overviewLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="backButton" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="backButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="matchesButton" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -53,14 +52,19 @@
               <Component id="substituteLabel" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
           </Group>
+          <Group type="102" alignment="1" attributes="0">
+              <EmptySpace pref="143" max="32767" attributes="0"/>
+              <Component id="lineupHeadingLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="142" max="-2" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="overviewLabel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="42" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+              <Component id="lineupHeadingLabel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="30" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="substituteLabel" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="lineupLabel" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -81,7 +85,10 @@
                       <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <Component id="backButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="backButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="matchesButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -115,18 +122,21 @@
     </Container>
     <Component class="javax.swing.JButton" name="backButton">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Monospaced" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="back"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="overviewLabel">
+    <Component class="javax.swing.JLabel" name="lineupHeadingLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Monospaced" size="48" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="MATCHES"/>
+        <Property name="text" type="java.lang.String" value="LINEUPS"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane2">
@@ -182,6 +192,14 @@
         </Property>
         <Property name="text" type="java.lang.String" value="PLAYERS"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="matchesButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Matches"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="matchesButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
