--- a/src/main/java/UI/MobileManager.form
+++ b/src/main/java/UI/MobileManager.form
@@ -3,6 +3,12 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[500, 340]"/>
+    </Property>
+    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[500, 340]"/>
+    </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[500, 400]"/>
     </Property>
@@ -42,11 +48,11 @@
           <Group type="102" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="TeamManagerButton" max="32767" attributes="0"/>
+                  <Component id="lineupsButton" max="32767" attributes="0"/>
                   <Component id="PlayerManagerButton" pref="230" max="32767" attributes="0"/>
                   <Component id="practiceButton1" max="32767" attributes="0"/>
                   <Component id="ViewMatchesButton" max="32767" attributes="0"/>
-                  <Component id="lineupsButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="attendanceButton" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -64,9 +70,9 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="PlayerManagerButton" min="-2" pref="33" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="TeamManagerButton" min="-2" pref="33" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="lineupsButton" min="-2" pref="33" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Component id="attendanceButton" min="-2" pref="33" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
               <Component id="logoutButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
@@ -80,7 +86,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Monospaced" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Manage players"/>
+        <Property name="text" type="java.lang.String" value="Player manager"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PlayerManagerButtonActionPerformed"/>
@@ -108,15 +114,15 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ViewMatchesButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="TeamManagerButton">
+    <Component class="javax.swing.JButton" name="lineupsButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Monospaced" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Manage teams"/>
+        <Property name="text" type="java.lang.String" value="Lineups"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TeamManagerButtonActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lineupsButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="logoutButton">
@@ -138,13 +144,16 @@
         <Property name="text" type="java.lang.String" value="MOBILE MANAGER"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="lineupsButton">
+    <Component class="javax.swing.JButton" name="attendanceButton">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Monospaced" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Lineups"/>
+        <Property name="text" type="java.lang.String" value="Attendance"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="attendanceButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
